--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header id="main_navigation" class="clearfix">
-		<a href="#" class="name">Josiah Maharaj</a>
+		<%= link_to "Josiah Maharaj", root_path, class: "name" %>
 		<nav>
 			<%= link_to "Articles", posts_path %>
 			<a href="projects.html">Projects</a>
@@ -19,6 +19,16 @@
 	</header>
 
 <%= yield %>
+
+	<footer id="main_footer">
+		<p class="copyright">&copy; 2015 Josiah Maharaj</p>
+		<nav>
+			<a href="http://www.facebook.com/josiah.maharaj1" target="_blank"><i class="fa fa-facebook"></i></a>
+			<a href="http://www.twitter.com/josiah_eli" target="_blank"><i class="fa fa-twitter"></i></a>
+			<a href="http://plus.google.com/u/0/107554480469709242255" target="_blank"><i class="fa fa-google-plus"></i></a>
+		</nav>
+		
+	</footer>
 
 </body>
 </html>
