--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
 		<hr>
 	</header>
 	<div id="content">
-		<%= @post.content %>
+		<%= markdown @post.content %>
 	</div>
 	<hr>
 	<div id="share_box">
@@ -31,3 +31,5 @@
 
 <br>
 <br>
+
+<%= link_to "Edit", edit_post_path(@post) %>
