will_paginate gem init

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,10 +11,4 @@
 		</div>
 	<% end %>
 
-<div class="pagination">
-		<span class="previous_page disabled">
-			<- Previous
-		</span>
-		<em class="current">1</em>
-		<a rel="next" href="#">Next -></a>
-	</div>
+<%= will_paginate @posts %>
