--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,11 +18,10 @@
 	<div class="col-3 homepage_content">
 		<h2>Stuff I've Built</h2>
 		<hr>
-		<h3><a href="#">Unicast</a></h3>
-		<p class="date">Friday April 10th</p>
-		<h3><a href="#">Community</a></h3>
-		<p class="date">Friday April 10th</p>
-		<h3><a href="#">Challenge</a></h3>
-		<p class="date">Friday April 10th</p>
+
+		<% @projects.each do |project| %>
+			<h3><a href="#"><%= link_to project.title, project %></a></h3>
+			<p class="date"><%= project.created_at.strftime("%A, %b %d") %></p>
+		<% end %>
 	</div>
 </div>
