--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>Edit Post</h1>
+<h1 id="page_title">Log in</h1>
 
-<%= render 'form' %>
+<div class="skinny_wrapper wrapper_padding">
+	<h1>Edit Post</h1>
+
+	<%= render 'form' %>
+</div>
