--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,6 +7,14 @@
 	<div id="content">
 		<%= markdown @post.content %>
 	</div>
+
+	<% if user_signed_in? %>
+		<div class="admin_links">
+			<%= link_to "Edit Article", edit_post_path(@post) %>
+			<%= link_to "Delete Article", post_path(@post), method: :delete, data: {confirm: "Are you sure?"} %>
+		</div>
+	<% end %>
+
 	<hr>
 	<div id="share_box">
 		<p>Share <%= @post.title %></p>
@@ -32,5 +40,3 @@
 
 <br>
 <br>
-
-<%= link_to "Edit", edit_post_path(@post) %>
